fix a small layout bug

--- a/src/legacy/components/page-header/_page-header.scss
+++ b/src/legacy/components/page-header/_page-header.scss
@@ -9,6 +9,7 @@
     var(--color-border-default)
   );
   padding: 1.5rem 1.875rem 1rem; // 24px 30px 16px
+  width: 100%;
 
   .avatar {
     display: flex;
